<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpb_white"
    android:orientation="vertical"
    tools:context=".activity.GameActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/emotionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/black_bg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <ImageView
        android:id="@+id/emojiImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/title"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/emojiImg">

        <TextView
            android:id="@+id/ptsLabel"
            android:text="@string/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/blue_light"
            android:layout_marginTop="28dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/ptsValue"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/countdown"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black_bg"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"/>

    <com.tccec.emotionpimobile.custom.circularbutton.CircularProgressButton
        android:id="@+id/circularButton1"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/cpb_white"
        app:cpb_cornerRadius="48dp"
        app:cpb_textComplete="@string/Success"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Init" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
